--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,35 @@
 {
   "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Run current file",
-            "type": "lua-local",
-            "request": "launch",
-            "cwd": "${workspaceFolder}/src",
-            "program": {
-                "lua": "lua",
-                "file": "${file}",
-            }
+      {
+        "type": "lua-local",
+        "request": "launch",
+        "name": "import",
+        "program": {
+          "lua": "C:/tools/lua-5.2/bin/lua.exe",
+          "file": "src/liv/import/init.lua"
+
         },
-    ]
+        "env": {
+          "LUA_PATH": "src/?.lua;src/?/init.lua;lua_modules/share/lua/5.2/?.lua;lua_modules/share/lua/5.2/?/init.lua",
+          "LUA_CPATH": "lua_modules/lib/lua/5.2/?.dll"
+        }
+      },
+      {
+        "type": "lua-local",
+        "request": "launch",
+        "name": "Cur file",
+        "program": {
+          "lua": "C:/tools/lua-5.2/bin/lua.exe",
+          "file": "${file}"
+
+        },
+        "env": {
+          "LUA_PATH": "src/?.lua;src/?/init.lua;lua_modules/share/lua/5.2/?.lua;lua_modules/share/lua/5.2/?/init.lua",
+          "LUA_CPATH": "lua_modules/lib/lua/5.2/?.dll"
+        }
+      },
+    
+    ],
+
 }
