--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "workbench.colorCustomizations": {
-        "rainbowend.deep1": "#e06c75",
-        "rainbowend.deep2": "#6ca2e0",
-        "rainbowend.deep3": "#FAD02D",
+        "rainbowend.deep1": "#c800ff",
+        "rainbowend.deep2": "#ff83f9",
+        "rainbowend.deep3": "#885ffa",
         "titleBar.inactiveBackground": "#A599E9",
         "titleBar.activeBackground": "#2229B3",
         "activityBar.background": "#191E80",
