Plugin: indent rainbow

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "coenraads.bracket-pair-colorizer-2",
         "tangzx.emmylua",
-        "jduponchelle.rainbow-end"
+        "jduponchelle.rainbow-end",
+        "oderwat.indent-rainbow"
     ]
 }
